--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
       <body>
 
-                                          这是苏小乐的博客！
-
+             <h1>这是我使用github pages搭建的个人站点。</h1>
       </body>
 
 </html>
