--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
       <body>
 
-             <h1>这是我使用github pages搭建的个人站点。</h1>
+             <h1>This Website is constructed with github pages!</h1>
       </body>
 
 </html>
